--- a/views/login.ejs
+++ b/views/login.ejs
@@ -2,7 +2,7 @@
     <div class="col-md-6 m-auto">
         <div class="card card-body text-center">
             <h1 class="mb-3">
-                <img src="/assets/registration.webp" alt="icon" width="20%" />
+                <img src="/assets/registration.webp"  width="20%" />
             </h1>
             <h2>
                 Login
